--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 build_type = debug
+lib_deps =
+    PubSubClient
 ;build_flags = -DDEBUG_ESP_PORT=Serial -DDEBUG_ESP_CORE -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_SERVER
