--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp12e]
-platform = espressif8266
-board = esp12e
-framework = arduino
+[platformio]
+default_envs = esp12e
+
+[common]
 build_type = debug
 lib_deps =
     PubSubClient
 ;build_flags = -DDEBUG_ESP_PORT=Serial -DDEBUG_ESP_CORE -DDEBUG_ESP_WIFI -DDEBUG_ESP_HTTP_SERVER
+
+[env:esp12e]
+platform = espressif8266
+framework = arduino
+board = esp12e
+
+[env:nodemcuv2]
+platform = espressif8266
+framework = arduino
+board = nodemcuv2
